StockQuoteObservable-ThreadSafe-OpenCall-Updated