@@ -14,6 +14,9 @@ public class DataHandler implements Runnable {
         this.stockObservable = stockObservable;
         this.ticker = ticker;
     }
+    public void setDone() {
+        done = true;
+    }
 
     @Override
     public void run() {
@@ -23,11 +26,14 @@ public class DataHandler implements Runnable {
             stockObservable.changeQuote(ticker, quote);
         }
         if(done){
-            System.out.println("\nTerminated Data Handler Thread#"+ Thread.currentThread().threadId());
+            System.out.println("\nStopped Data Handler Thread#"+ Thread.currentThread().threadId());
+        }
+        try {
+            Thread.sleep(1000);
+        }catch(InterruptedException e) {
+            System.out.println("Thread #"+Thread.currentThread().getId() + " Interrupted");
         }
     }
 
-    public void setDone() {
-        done = true;
-    }
+
 }
